fixed z-index header

--- a/markup/components/header/header.scss
+++ b/markup/components/header/header.scss
@@ -1,7 +1,7 @@
 .c-header {	
 	position: relative;
 	height: 106px;
-	z-index: 10;
+	z-index: 99;
 
 	&__wrap {
 		position: fixed;
